--- a/TriviaMaja/index.html
+++ b/TriviaMaja/index.html
@@ -18,21 +18,26 @@
 
      <div class="card bg-blue-200 shadow-xl p-6 w-full max-w-lg">
 
-        <h1 class="titulo text-3xl font-bold text-center mb-4 text-blue-900">TRIVIA MAJA</h1>
+        <h1 id = "tituloTrivia" class="titulo text-3xl font-bold text-center mb-4 text-blue-900" style="color: #1e3a8a;">TRIVIA MAJA</h1>
+
+        <div id="imagenEstacion" class="mb-4">
         <img src="https://maja-front-592370419129.us-central1.run.app/assets/images/MAJA_LOGOTYPE_01.png" 
             alt="MAJA" 
             class="logo mx-auto mb-4">
+        </div>
+        <!--<div id="imagenEstacion" class="mb-4"></div> -->
 
-        
         <div id="trivia" class="mb-4"></div>
         
-        <button id="btnJugar" class="btn-jugar btn btn-info btn-block w-full mb-4 btn-blue-900">Jugar</button>
+        <button id="btnJugar" class="btn btn-block w-full mb-4" style="background-color: #1e3a8a; color: white;">Jugar</button>
 
         <h5 id="puntaje" class="puntaje text-center font-semibold"></h5>
 
     </div>
 
-    <script src="trivia.js"></script>
+<script src="triviaDiseno.js"></script>
+<script src="trivia.js"></script>
+
 
 </body>
 </html>
