--- a/TriviaMaja/index.html
+++ b/TriviaMaja/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>TRIVIA MAJA</title>
     
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.css" rel="stylesheet" type="text/css" />
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.css" rel="stylesheet" type="text/css" />
+        <style>
+            .font-helvetica {
+                font-family:Georgia, Times, 'Times New Roman', serif, Arial, sans-serif;
+            }
+        </style>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -12,13 +17,14 @@
             daisyui: { themes: ["light", "dark"] },
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     
 </head>
 <body class="bg-blue-100 flex flex-col items-center min-h-screen p-6">
 
      <div class="card bg-blue-200 shadow-xl p-6 w-full max-w-lg">
 
-        <h1 id = "tituloTrivia" class="titulo text-3xl font-bold text-center mb-4 text-blue-900" style="color: #1e3a8a;">TRIVIA MAJA</h1>
+    <h1 id="tituloTrivia" class="titulo text-3xl font-bold text-center mb-4 font-helvetica"> Trivia Maja </h1>
 
         <div id="imagenEstacion" class="mb-4">
         <img src="https://maja-front-592370419129.us-central1.run.app/assets/images/MAJA_LOGOTYPE_01.png" 
