--- a/TriviaMaja/index.html
+++ b/TriviaMaja/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+        <style>
+            @media print {
+                .no-imprimir { display: none !important; }
+            }
+        </style>
     <meta charset="UTF-8">
     <title>TRIVIA MAJA</title>
     
